# naj

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: build.sh  hash.sh
scripts/tests/: README.md  alice.sh  alice2.sh  alice3.sh  edge_cases.sh  security_edge.sh  stg_test.sh
src/: cli.rs  config.rs  git.rs  main.rs  manage.rs  sanitizer.rs  utils.rs
tests/: integration_strategies.rs  integration_test.rs  test_force_mocking.rs
