[package]
name = "naj"
version = "0.1.4"
edition = "2021"
description = "A secure, idempotent Git identity switcher. (Derived from Old Chinese /*ŋˤajʔ/ 'I/Me')"
authors = ["INX <inx@inx.wf>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/dotinx/naj"
repository = "https://github.com/dotinx/naj"
categories = ["command-line-utilities"]
exclude = ["scripts/","assets/"]


[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.1"
tempfile = "3.24"
predicates = "3.1"

[[bin]]
name = "naj"
path = "src/main.rs"
